tests/paczka2/big_fuzzy/18087308.err
Error in line 2: S429 S707 47,4
Error in line 6: 83ZJ6cH2mCc S429 90,2
Error in line 13: S429 S12 -2,5
Error in line 11: 7xSxBo5nIA S823 66,1
Error in line 14: 35Uro33cOL S823 39,8
Error in line 19: 83ZJ6cH2mCc S12 86,0
Error in line 24: iBt6aH S707 11,3
Error in line 32: 83ZJ6cH2mCc S823 26,3
Error in line 41: S429 S707 87,2
Error in line 42: S429 S823 62,0
Error in line 55: 35Uro33cOL S429 38,5
Error in line 58: 35Uro33cOL S12 27,4
Error in line 63: S429 S823 32,6
Error in line 72: 83ZJ6cH2mCc S823 94,0
Error in line 71: TUJEOzrovY S823 73,3
Error in line 82: S429 S12 72,51
Error in line 84: S429 S12 292,0
Error in line 91: S429 S707 91,3
Error in line 83: 7xSxBo5nIA S823 153,5
Error in line 87: iBt6aH S429 166,4
Error in line 93: 7xSxBo5nIA S12 0,8
Error in line 89: 35Uro33cOL S12 283,3
Error in line 116: TUJEOzrovY S12 50,1
Error in line 110: 7xSxBo5nIA S12 24,4
Error in line 124: 83ZJ6cH2mCc S707 71,4
Error in line 127: 83ZJ6cH2mCc S12 13,6
Error in line 128: 83ZJ6cH2mCc S823 87,5
Error in line 123: TUJEOzrovY S707 13,4
Error in line 146: 83ZJ6cH2mCc S707 4,5
Error in line 142: TUJEOzrovY S823 75,3
Error in line 159: S429 S823 29,2
Error in line 163: S429 S429 81,8
Error in line 169: 83ZJ6cH2mCc S12 96,93
Error in line 168: 7xSxBo5nIA S429 92,8
Error in line 177: 7xSxBo5nIA S823 54,6
Error in line 162: 83ZJ6cH2mCc S707 7,0
Error in line 188: 83ZJ6cH2mCc S12 423,7
Error in line 197: 35Uro33cOL S707 50,1
Error in line 199: 35Uro33cOL S12 31,2
Error in line 204: S429 S429 49,8
Error in line 235: S429 S823 64,07
Error in line 240: 5oIl S823 52,4
Error in line 232: 35Uro33cOL S12 285,0
